[gd_scene load_steps=9 format=3 uid="uid://c4mhj4siw2omn"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_0k57n"]
[ext_resource type="PackedScene" uid="uid://f0v4iu8kbwpr" path="res://scenes/pirate_world.tscn" id="2_esssv"]
[ext_resource type="PackedScene" uid="uid://xshjxphjm5f4" path="res://scenes/player.tscn" id="3_c20tf"]
[ext_resource type="PackedScene" uid="uid://ddiisj2bwo24d" path="res://scenes/treasure.tscn" id="3_pk5t1"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="4_5u8hd"]
[ext_resource type="PackedScene" uid="uid://b85oycvx061u2" path="res://scenes/hud.tscn" id="5_q3r0m"]
[ext_resource type="PackedScene" uid="uid://dxkjpndvcy7di" path="res://scenes/end_screen.tscn" id="6_t33c6"]
[ext_resource type="PackedScene" uid="uid://c663u565o5ii6" path="res://scenes/ennemy.tscn" id="7_utbh8"]

[node name="Main" type="Node2D"]
script = ExtResource("1_0k57n")
ennemy_scene = ExtResource("7_utbh8")
treasure_scene = ExtResource("3_pk5t1")

[node name="Level1" parent="." instance=ExtResource("2_esssv")]
position = Vector2(200, 40)
nb_treasures = 10

[node name="Player" parent="." instance=ExtResource("3_c20tf")]
position = Vector2(360, 328)
animation_speed = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true
script = ExtResource("4_5u8hd")

[node name="HUD" parent="." instance=ExtResource("5_q3r0m")]
z_index = -1

[node name="EndScreen" parent="." instance=ExtResource("6_t33c6")]
visible = false
offset_left = 201.0
offset_top = 39.0
offset_right = 201.0
offset_bottom = 39.0

[connection signal="has_won" from="Player" to="." method="_on_player_has_won"]
[connection signal="is_dead" from="Player" to="EndScreen" method="_on_player_is_dead"]
[connection signal="status_changed" from="Timer" to="Player" method="_on_timer_status_changed"]
[connection signal="timeout" from="Timer" to="EndScreen" method="_on_timer_timeout"]
[connection signal="endgame" from="EndScreen" to="." method="_on_end_screen_endgame"]
[connection signal="restart" from="EndScreen" to="." method="_on_end_screen_restart"]
